# baby-book-maker

./: .env.example  .gitignore  pyproject.toml  result.json
v0/: crew.py  pydantic_models.py
v0/config/: agents.yaml  tasks.yaml
v0/tools/: image_generation.py
